--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,12 +6,14 @@
 body {
     /* background: #101a20; */
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
 
 /* dark mode looking scrollbar */
 ::-webkit-scrollbar {
     width: 8px;
-
 }
 
 ::-webkit-scrollbar-track {
